--- a/DesignerRHN/DesignerRHN-war/web/unidad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/unidad.xhtml
@@ -90,13 +90,13 @@
                                     </f:facet>                                    
                                     <p:cellEditor>  
                                         <f:facet name="output">
-                                            <h:outputText value="#{unidades.codigo}" >
+                                            <h:outputText value="#{unidades.codigo}" styleClass="capitalized" >
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
                                             <p:inputText value="#{unidades.codigo}" id="editarUnidadesCodigos" style="border-radius: 0px; width: 99.5%; text-transform: uppercase;height: 12px"> 
                                                 <p:ajax event="select" listener="#{controlUnidad.cambiarIndice(indice, 0)}" />
-                                                <p:ajax event="change" listener="#{controlUnidad.modificarUnidades (indice, 'N', unidades.codigo)}" update="@this"/>
+                                                <p:ajax event="change" listener="#{controlUnidad.modificarUnidades (indice, 'C', unidades.codigo)}" update="@this"/>
                                             </p:inputText> 
                                         </f:facet>   
                                     </p:cellEditor>
@@ -117,7 +117,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{unidades.nombre}" id="editarNombresUnidades" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase;height: 12px"> 
                                                 <p:ajax event="select" listener="#{controlUnidad.cambiarIndice(indice, 1)}" />
-                                                <p:ajax event="change" listener="#{controlUnidad.modificarUnidades (indice, 'N', unidades.nombre)}" update="@this" />
+                                                <p:ajax event="change" listener="#{controlUnidad.modificarUnidades (indice, 'D', unidades.nombre)}" update="@this" />
                                             </p:inputText> 
                                         </f:facet>   
                                     </p:cellEditor>
@@ -325,6 +325,11 @@
                         <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
                         <h:outputText value="#{msg['validacionNuevo']} #{controlUnidad.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
                         <p:commandButton value="#{msg['aceptar']}" onclick="validacionNuevaUnidad.hide();" style="position: absolute; top: 50px; left: 300px" process="@this" />
+                    </p:dialog>
+                    <p:dialog id="validacionNombre" header="#{msg['atencion']}" widgetVar="validacionNombre"  resizable="false" draggable="false" modal="true" height="95" width="400px"  closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                        <h:outputText value="#{msg['validacionNombre']}" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
+                        <p:commandButton value="#{msg['aceptar']}" onclick="validacionNombre.hide();" style="position: absolute; top: 50px; left: 300px" process="@this" />
                     </p:dialog>
 
                     <!-- DIALOGOS EDITAR -->
