--- a/DesignerRHN/DesignerRHN-war/web/Atausentismos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Atausentismos.xhtml
@@ -286,7 +286,7 @@
                                                 <p:ajax event="dblclick" listener="#{controlAusentismos.asignarIndex(indice, 2, 0)}"/>
                                             </p:inputText>
                                         </f:facet>
-                                    </p:cellEditor>  
+                                    </p:cellEditor>
                                 </p:column>
                                 <!--Causa Ausentismo-->
                                 <p:column >                                  
@@ -299,7 +299,8 @@
                                                 <p:ajax event="dblclick" listener="#{controlAusentismos.asignarIndex(indice, 3, 0)}"/>
                                             </p:inputText>
                                         </f:facet>
-                                    </p:cellEditor>  
+                                    </p:cellEditor>                                     
+                                    
                                 </p:column>
                                 <!-- Dias Ausentismo -->  
                                 <p:column >                                  
@@ -554,6 +555,7 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>  
+                                    </p:column>
                             </p:dataTable>
                         </fieldset>
 
